fixed jumbotron, navbar spacing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body{
+	padding-top: 70px;
+}
+
 img {
 	filter:grayscale(90%);
 }
